Added error handlers 404 and 500 with respective html. Finished about page added new package flask-markdown. Added fake.py to automatically add patients and history. fakey package added to pipenv dev packages. Added database migrations with alembic. Added basic unit tests

--- a/Pipfile
+++ b/Pipfile
@@ -28,8 +28,11 @@ MarkupSafe = "==2.0.1"
 SQLAlchemy = "==1.4.25"
 Werkzeug = "==2.0.2"
 WTForms = "==2.3.3"
+flask-migrate = "*"
+flask-markdown = "*"
 
 [dev-packages]
+faker = "*"
 
 [requires]
 python_version = "3.9"
